Prepare makefile for creating favicon and interoperational app icons

--- a/web/src/views/components/form/input-range.jade
+++ b/web/src/views/components/form/input-range.jade
@@ -1,5 +1,6 @@
 div.form-slider(ng-switch-when='Slider')
-  span.floor-label(ng-click='field.submit_input = field.slider_floor')
+  a.limit-label(ng-click='field.submit_input = field.slider_floor'
+                   role='button', tabindex='0')
     | {{field.slider_floor_label}} 
   input(type='range', 
         ng-model='field.submit_input', 
@@ -7,7 +8,8 @@ div.form-slider(ng-switch-when='Slider')
         min='{{field.slider_floor}}',
         max='{{field.slider_ceiling}}',
         step='{{field.slider_step}}') 
-  span.ceiling-label(ng-click='field.submit_input = field.slider_ceiling')
+  a.limit-label(ng-click='field.submit_input = field.slider_ceiling',
+                     role='button', tabindex='0')
     | {{field.slider_ceiling_label}} 
   br
   strong
