--- a/web/src/views/mixins/favicon.jade
+++ b/web/src/views/mixins/favicon.jade
@@ -24,7 +24,7 @@ link(rel='icon', type='image/png', sizes='96x96',
 link(rel='icon', type='image/png', sizes='32x32',
      href='assets/app-icon/favicon-32x32.png')
 link(rel='icon', type='image/png', sizes='16x16',
-     href='assets/app-icon/favicon-16x16')
+     href='assets/app-icon/favicon-16x16.png')
 
 meta(name='msapplication-TileColor', content='#34495e')
 meta(name='msapplication-TileImage', content='/mstile-144x144.png')
