--- a/web/src/css/index.styl
+++ b/web/src/css/index.styl
@@ -4,3 +4,13 @@
 @import 'highlight'
 @import 'file-upload'
 @import 'loaders'
+
+.toggle-content
+  overflow hidden
+  max-height 999px
+  opacity 1
+  transition all .2s ease-in-out
+  transform translate3d(0, 0 ,0)
+  &.collapsed
+    max-height 0
+    opacity .5
