--- a/web/src/css/index.styl
+++ b/web/src/css/index.styl
@@ -14,3 +14,15 @@
   &.collapsed
     max-height 0
     opacity .5
+
+.wide-16-9
+  position relative
+  padding-bottom 56.25% // 16:9
+  padding-top 25px
+  height 0
+  > *:first-child
+    position absolute
+    top 0
+    left 0
+    width 100%
+    height 100%
