--- a/web/src/views/components/gallery.jade
+++ b/web/src/views/components/gallery.jade
@@ -1,10 +1,9 @@
-.wide-16-9
-  .gallery(ng-class='galleryClass(section.description_gallery_left)')
-    ul(style='overflow:hidden;overflow-x:auto;padding:0;text-align:center;font-size:0;white-space:nowrap;list-style:none;height:100%')
-      li(bind-once, ng-repeat='item in section.gallery',
-         style='display:inline-block;height:100%')
-        img(bind-once, lazy-src='{{env.REST_URL}}/uploads/{{item.file_dir}}',
-            style="display:block;height:100%;width:100%")
+.gallery(style='height:20rem', ng-class='galleryClass(section.description_gallery_left)')
+  ul(style='overflow:hidden;overflow-x:auto;padding:0;text-align:center;font-size:0;white-space:nowrap;list-style:none;height:100%')
+    li(bind-once, ng-repeat='item in section.gallery',
+       style='display:inline-block;height:100%')
+      img(bind-once, lazy-src='{{env.REST_URL}}/uploads/{{item.file_dir}}',
+          style="display:block;max-height:100%;max-width:100%")
 p(ng-if='section.gallery_description',
   ng-bind='section.gallery_description',
   bind-once)
