Youtube directive - The directive if detected in a view will now append asynchronously and for once the YouTube javascript API to take control of players. - Allows a videoStop() method on youtube players if there are multiple players on a view, that prevents several videos to play at the same time. When a video is played, it stop the load and xhr loading of the previously played video if it is in a play state

--- a/web/src/views/index.jade
+++ b/web/src/views/index.jade
@@ -5,8 +5,8 @@ html(lang='en')
     title(ng-bind='pageTitleBind') MINDLIFE
     include mixins/favicon
     link(rel='stylesheet', href='dist/index.css')
-    link(rel='stylesheet', 
-         href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
+    // link(rel='stylesheet', 
+    //      href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
 
   body(style='overflow-x:hidden', ng-class='activeNav')
 
