Angular update and misc cleanings

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -2,9 +2,11 @@
 @import 'fonts'
 @import 'navigation'
 @import 'header'
+@import 'footer'
 @import 'highlight'
 @import 'file-upload'
 @import 'loaders'
+@import 'layout'
 
 .toggle-content
   overflow hidden
