--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -5,14 +5,11 @@ html(lang='en')
     title(ng-bind='pageTitleBind') MINDLIFE
     include mixins/favicon
     link(rel='stylesheet', href='dist/index.css')
-    // link(rel='stylesheet', 
-    //      href='http://fonts.googleapis.com/css?family=Lato:300,400,700')
 
-  body(style='overflow-x:hidden', ng-class='activeNav')
+  body(ng-class='activeNav')
 
     .app-loader(ng-hide='appLoaded')
-      img(style='display:block;margin:0 auto',
-          src='assets/loader.gif', alt='', width='64', height='64')
+      img(src='assets/loader.gif', alt='', width='64', height='64')
       p Loading…
 
     #app.app(ng-class='{loaded: appLoaded}', style='display:none')
