Skeleton of theme - Added screen directive to create full screen pages on top of the app   (used for search) - Added negative-margin directive to create responsive negative spaces   on galleries or any element (map...) - Base Layout for the app

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -1,4 +1,5 @@
 @import 'nib'
+@import 'search'
 @import 'fonts'
 @import 'navigation'
 @import 'header'
@@ -7,6 +8,11 @@
 @import 'file-upload'
 @import 'loaders'
 @import 'layout'
+@import 'forms'
+@import 'search'
+
+body
+  line-height 1.4
 
 .toggle-content
   overflow hidden
