--- a/src/css/navigation.styl
+++ b/src/css/navigation.styl
@@ -1,3 +1,15 @@
 .navbar
+  ul
+    padding 0
+    margin 0
+    border-top 1px solid #ccc
+  a
+  label
+    display block
+    padding .7rem 1rem
+    color inherit
+    text-decoration none
+    border-bottom 1px solid #ccc
+    transition background .6s ease
   .active
-    color red
+    background #efefef
